--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <div id="controls">
     <button onclick="addSquare()">Añadir Cuadrado</button>
     <button onclick="addTriangle()">Añadir Triángulo</button>
-	<button onclick="downloadImage()">Descargar Imagen</button>	
+    <button onclick="downloadImage()">Descargar Imagen</button>	
+   <button onclick="getCountries()">Descargar Imagen</button>	
   </div>
   <div id="container"></div>
 
@@ -95,7 +96,30 @@
       layer.add(triangle);
       layer.draw();
     }
-	
+
+function downloadImage() {
+  const dataURL = stage.toDataURL({ pixelRatio: 2 });
+
+  fetch('https://capgemini-spain-1016.appiancloud.com/suite/webapi/guardarImagenAppian', {
+    method: 'POST',
+	mode: 'no-cors',
+    headers: {
+      'Content-Type': 'application/json',
+      'Appian-API-Key': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJiOGRjMzU4YS02MGViLWMxN2ItZmM4Ni00M2JlMmIzNzk2NTYifQ.RR5Y4TwvMfkxiZzcVKER_sRVJMg3gNN307C2_Q4rlqY'
+    },
+    body: JSON.stringify({
+      nombreArchivo: 'marcacion.png',
+      imagenBase64: dataURL
+    })
+  })
+  .then(response => response.json())
+  .then(data => {
+    alert('Imagen enviada a APPIAN. ID del documento: ' + data.documentId);
+  })
+  .catch(error => {
+    console.error('Error al enviar la imagen a APPIAN:', error);
+  });
+}
 	
  async function getCountries() {
             const apiUrl = 'https://restcountries.com/v3.1/all';
