--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button onclick="addSquare()">Añadir Cuadrado</button>
     <button onclick="addTriangle()">Añadir Triángulo</button>
     <button onclick="downloadImage()">Descargar Imagen</button>	
-   <button onclick="getCountries()">Api Paises</button>	
+   <button onclick="callAPI()">call API</button>	
   </div>
   <div id="container"></div>
 
