--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ function downloadImage() {
   });
 }
 	
-function callAPI() {
+async function callAPI() {
             const apiUrl = 'https://capgemini-spain-1016.appiancloud.com/suite/webapi/guardarImagenAppian';
             const apiKey = 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJiOGRjMzU4YS02MGViLWMxN2ItZmM4Ni00M2JlMmIzNzk2NTYifQ.RR5Y4TwvMfkxiZzcVKER_sRVJMg3gNN307C2_Q4rlqY';
             const data = {
