--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ async function callAPI() {
             try {
                 const response = await fetch(apiUrl, {
                     method: 'POST',
+		    mode: 'no-cors',
                     headers: {
                         'Content-Type': 'application/json',
                         'API-Key': apiKey
