--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         height: 50,
         fill: 'red',
         draggable: true,
+	opacity: 0.5 
       });
 	  
 	square.on('click', function () {
@@ -86,6 +87,7 @@
         strokeWidth: 2,
         closed: true,
         draggable: true,
+	opacity: 0.5 
       });
 	  
 	triangle.on('click', function () {
